Implemented new requirements